# Oklix

./: .dockerignore  .env  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE.md  SECURITY.md  app.py  demo.py  docker-compose.yml  pyproject.toml  requirements-lock.txt  requirements.txt
api/: app.py  exceptions.py  middleware.py  models.py  routes.py  version.py
app/: agent.py  cli.py  main.py
core/: __init__.py  analyzer.py  capability_engine.py  cost_engine.py  cost_estimator.py  decision_engine.py  decision_profiles.py  decision_report.py  execution_executor.py  execution_planner.py  experience_engine.py  explanation_engine.py  latency_engine.py  logger.py  mcp_server.py  multi_agent.py  optimizer.py  provider_health.py  provider_knowledge.py  provider_router.py  provider_selector.py  ranking.py  ranking_engine.py  recommendation_builder.py  recommendation_history.py  registry.py  runtime.py  scoring.py  tool_executor.py  tool_registry.py  tool_router.py  tradeoff_engine.py
docs/: ARCHITECTURE.md  CHANGELOG.md  CURRENT_STATUS.md  DECISIONS.md  PRINCIPLES.md  PROJECT_CONTEXT.md  ROADMAP.md  SESSION_HANDOFF.md  VISION.md
domain/: __init__.py  comparison.py  decision_metrics.py  decision_response.py  execution_context.py  execution_plan.py  execution_result.py  execution_step.py  model_capability.py  model_info.py  profile.py  ranking.py  recommendation.py  task.py  tool_call.py  tool_result.py
examples/: demo.py
mcp/: server.py  tools.py
oklix.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
oklix_mcp/: __init__.py  tools.py  (+3 more)
(+80 files in other folders)
