[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oklix"
version = "0.1.0"
description = "Decision Intelligence MCP for AI Agents"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["domain*", "core*", "mcp*", "app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]